tests/models/enum/named/i8/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: i8
    },
}
fn main() {}
